; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/fts3/extr_fts3_write.c_fts3ChecksumEntry.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/fts3/extr_fts3_write.c_fts3ChecksumEntry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32, i32, i32, i32, i32)* @fts3ChecksumEntry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fts3ChecksumEntry(i8* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i8* %0, i8** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %17 = load i32, i32* %12, align 4
  store i32 %17, i32* %16, align 4
  %18 = load i32, i32* %16, align 4
  %19 = shl i32 %18, 3
  %20 = load i32, i32* %10, align 4
  %21 = add nsw i32 %19, %20
  %22 = load i32, i32* %16, align 4
  %23 = add nsw i32 %22, %21
  store i32 %23, i32* %16, align 4
  %24 = load i32, i32* %16, align 4
  %25 = shl i32 %24, 3
  %26 = load i32, i32* %11, align 4
  %27 = add nsw i32 %25, %26
  %28 = load i32, i32* %16, align 4
  %29 = add nsw i32 %28, %27
  store i32 %29, i32* %16, align 4
  %30 = load i32, i32* %16, align 4
  %31 = shl i32 %30, 3
  %32 = load i32, i32* %13, align 4
  %33 = add nsw i32 %31, %32
  %34 = load i32, i32* %16, align 4
  %35 = add nsw i32 %34, %33
  store i32 %35, i32* %16, align 4
  %36 = load i32, i32* %16, align 4
  %37 = shl i32 %36, 3
  %38 = load i32, i32* %14, align 4
  %39 = add nsw i32 %37, %38
  %40 = load i32, i32* %16, align 4
  %41 = add nsw i32 %40, %39
  store i32 %41, i32* %16, align 4
  store i32 0, i32* %15, align 4
  br label %42

42:                                               ; preds = %58, %7
  %43 = load i32, i32* %15, align 4
  %44 = load i32, i32* %9, align 4
  %45 = icmp slt i32 %43, %44
  br i1 %45, label %46, label %61

46:                                               ; preds = %42
  %47 = load i32, i32* %16, align 4
  %48 = shl i32 %47, 3
  %49 = load i8*, i8** %8, align 8
  %50 = load i32, i32* %15, align 4
  %51 = sext i32 %50 to i64
  %52 = getelementptr inbounds i8, i8* %49, i64 %51
  %53 = load i8, i8* %52, align 1
  %54 = sext i8 %53 to i32
  %55 = add nsw i32 %48, %54
  %56 = load i32, i32* %16, align 4
  %57 = add nsw i32 %56, %55
  store i32 %57, i32* %16, align 4
  br label %58

58:                                               ; preds = %46
  %59 = load i32, i32* %15, align 4
  %60 = add nsw i32 %59, 1
  store i32 %60, i32* %15, align 4
  br label %42

61:                                               ; preds = %42
  %62 = load i32, i32* %16, align 4
  ret i32 %62
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
